edited access key ID name

--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -70,5 +70,5 @@ jobs:
         pip install awsebcli
         unzip application.zip -d deploy
         cd deploy
-        eb init -p python-3.8 ZH-app --region $AWS_REGION
+        eb init ZH-app --platform python-3.8 --region $AWS_REGION --key $AWS_ACCESS_KEY_ID
         eb deploy ZH-app-env --region $AWS_REGION --source deploy/
